--- a/src/styles/themes/_theme.scss
+++ b/src/styles/themes/_theme.scss
@@ -2,11 +2,11 @@
 @use "sass:color";
 @use "sass:map";
 @use "../utilities/colors" as COL;
-@use "../abstracts/config" as *;
+@use "../abstracts/config" as VAR;
 
-@if $generate-utility-classes {
+@if VAR.$generate-utility-classes {
   :root,
-  [data-theme="light"] {
+  #{VAR.$parent-selector} [data-theme="light"] {
     // Theme color CSS variables
     @each $color-name, $scale in COL.$colors {
       --#{$color-name}: #{color.adjust(map.get($scale, 500), $alpha: 1)};
@@ -23,12 +23,12 @@
       }
     }
 
-    @each $token in $theme-tokens {
-      --#{$token}: #{map.get($light-theme, $token)};
+    @each $token in VAR.$theme-tokens {
+      --#{$token}: #{map.get(VAR.$light-theme, $token)};
     }
 
-    --button-text-color: #{map.get($dark-theme, "text-default")};
-    --inverted-text-color: #{map.get($dark-theme, "text-default")};
+    --button-text-color: #{map.get(VAR.$dark-theme, "text-default")};
+    --inverted-text-color: #{map.get(VAR.$dark-theme, "text-default")};
 
     // Light theme variables
     --button-bg-color: var(--primary);
@@ -36,34 +36,36 @@
     --link-color: var(--primary);
     --link-hover-color: var(--primary-600);
 
-    // Scrollbar styling
-    &::-webkit-scrollbar {
-      width: 12px;
-    }
+    // #{VAR.$parent-selector} {
+    //   // Scrollbar styling
+    //   &::-webkit-scrollbar {
+    //     width: 12px;
+    //   }
 
-    &::-webkit-scrollbar-track {
-      background: var(--background);
-    }
+    //   &::-webkit-scrollbar-track {
+    //     background: var(--background);
+    //   }
 
-    &::-webkit-scrollbar-thumb {
-      background-color: #888;
-      border-radius: 6px;
-      border: 3px solid var(--background);
-    }
+    //   &::-webkit-scrollbar-thumb {
+    //     background-color: #888;
+    //     border-radius: 6px;
+    //     border: 3px solid var(--background);
+    //   }
 
-    scrollbar-width: thin;
-    scrollbar-color: #888 var(--background);
+    //   scrollbar-width: thin;
+    //   scrollbar-color: #888 var(--background);
+    // }
   }
 
-  @if $enable-dark-mode {
+  @if VAR.$enable-dark-mode {
     // Dark theme settings
     [data-theme="dark"] {
-      @each $token in $theme-tokens {
-        --#{$token}: #{map.get($dark-theme, $token)};
+      @each $token in VAR.$theme-tokens {
+        --#{$token}: #{map.get(VAR.$dark-theme, $token)};
       }
 
-      --button-text-color: #{map.get($light-theme, "text-default")};
-      --inverted-text-color: #{map.get($light-theme, "text-default")};
+      --button-text-color: #{map.get(VAR.$light-theme, "text-default")};
+      --inverted-text-color: #{map.get(VAR.$light-theme, "text-default")};
       --button-bg-color: var(--primary);
       --button-bg-color-hover: var(--primary-400);
       --link-color: var(--primary);
@@ -92,45 +94,45 @@
     @each $shade, $value in $scale {
       // Automatic text contrast for backgrounds
       // todo: documentaton may add karo issay
-      .text-on-#{$color-name}-#{$shade} {
+      #{VAR.$parent-selector} .text-on-#{$color-name}-#{$shade} {
         color: COL.find-text-color($value);
       }
 
-      .text-#{$color-name}-#{$shade},
-      .hover\:text-#{$color-name}-#{$shade}:hover, // todo: improve these loops to save time
-      .group:hover .group-hover\:text-#{$color-name}-#{$shade} {
+      #{VAR.$parent-selector} .text-#{$color-name}-#{$shade},
+      #{VAR.$parent-selector} .hover\:text-#{$color-name}-#{$shade}:hover, // todo: improve these loops to save time
+      #{VAR.$parent-selector} .group:hover .group-hover\:text-#{$color-name}-#{$shade} {
         color: var(--#{$color-name}-#{$shade});
       }
 
-      .bg-#{$color-name}-#{$shade},
-      .hover\:bg-#{$color-name}-#{$shade}:hover, // todo: improve these loops to save time
-      .group:hover .group-hover\:bg-#{$color-name}-#{$shade} {
+      #{VAR.$parent-selector} .bg-#{$color-name}-#{$shade},
+      #{VAR.$parent-selector} .hover\:bg-#{$color-name}-#{$shade}:hover, // todo: improve these loops to save time
+      #{VAR.$parent-selector} .group:hover .group-hover\:bg-#{$color-name}-#{$shade} {
         background-color: var(--#{$color-name}-#{$shade});
       }
 
-      .border-#{$color-name}-#{$shade},
-      .hover\:border-#{$color-name}-#{$shade}:hover,
-      .group:hover .group-hover\:border-#{$color-name}-#{$shade} {
+      #{VAR.$parent-selector} .border-#{$color-name}-#{$shade},
+      #{VAR.$parent-selector} .hover\:border-#{$color-name}-#{$shade}:hover,
+      #{VAR.$parent-selector} .group:hover .group-hover\:border-#{$color-name}-#{$shade} {
         border-color: var(--#{$color-name}-#{$shade});
       }
     }
 
     // Base color classes
-    .text-#{$color-name},
-    .hover\:text-#{$color-name}:hover, // todo: improve these loops to save time
-    .group:hover .group-hover\:text-#{$color-name} {
+    #{VAR.$parent-selector} .text-#{$color-name},
+    #{VAR.$parent-selector} .hover\:text-#{$color-name}:hover, // todo: improve these loops to save time
+    #{VAR.$parent-selector} .group:hover .group-hover\:text-#{$color-name} {
       color: var(--#{$color-name});
     }
 
-    .bg-#{$color-name},
-    .hover\:bg-#{$color-name}:hover, // todo: improve these loops to save time
-    .group:hover .group-hover\:bg-#{$color-name} {
+    #{VAR.$parent-selector} .bg-#{$color-name},
+    #{VAR.$parent-selector} .hover\:bg-#{$color-name}:hover, // todo: improve these loops to save time
+    #{VAR.$parent-selector} .group:hover .group-hover\:bg-#{$color-name} {
       background-color: var(--#{$color-name});
     }
 
-    .border-#{$color-name},
-    .hover\:border-#{$color-name}:hover,
-    .group:hover .group-hover\:border-#{$color-name} {
+    #{VAR.$parent-selector} .border-#{$color-name},
+    #{VAR.$parent-selector} .hover\:border-#{$color-name}:hover,
+    #{VAR.$parent-selector} .group:hover .group-hover\:border-#{$color-name} {
       border-color: var(--#{$color-name});
     }
   }
@@ -139,99 +141,99 @@
   // green, purple, pink etc.
   @each $color-name, $scale in COL.$colors-primitives {
     @each $shade, $value in $scale {
-      .text-on-#{$color-name}-#{$shade} {
+      #{VAR.$parent-selector} .text-on-#{$color-name}-#{$shade} {
         color: COL.find-text-color($value);
       }
 
-      .text-#{$color-name}-#{$shade},
-      .hover\:text-#{$color-name}-#{$shade}:hover, // todo: improve these loops to save time
-      .group:hover .group-hover\:text-#{$color-name}-#{$shade} {
+      #{VAR.$parent-selector} .text-#{$color-name}-#{$shade},
+      #{VAR.$parent-selector} .hover\:text-#{$color-name}-#{$shade}:hover, // todo: improve these loops to save time
+      #{VAR.$parent-selector} .group:hover .group-hover\:text-#{$color-name}-#{$shade} {
         color: var(--#{$color-name}-#{$shade});
       }
 
-      .bg-#{$color-name}-#{$shade},
-      .hover\:bg-#{$color-name}-#{$shade}:hover, // todo: improve these loops to save time
-      .group:hover .group-hover\:bg-#{$color-name}-#{$shade} {
+      #{VAR.$parent-selector} .bg-#{$color-name}-#{$shade},
+      #{VAR.$parent-selector} .hover\:bg-#{$color-name}-#{$shade}:hover, // todo: improve these loops to save time
+      #{VAR.$parent-selector} .group:hover .group-hover\:bg-#{$color-name}-#{$shade} {
         background-color: var(--#{$color-name}-#{$shade});
       }
 
-      .border-#{$color-name}-#{$shade},
-      .hover\:border-#{$color-name}-#{$shade}:hover,
-      .group:hover .group-hover\:border-#{$color-name}-#{$shade} {
+      #{VAR.$parent-selector} .border-#{$color-name}-#{$shade},
+      #{VAR.$parent-selector} .hover\:border-#{$color-name}-#{$shade}:hover,
+      #{VAR.$parent-selector} .group:hover .group-hover\:border-#{$color-name}-#{$shade} {
         border-color: var(--#{$color-name}-#{$shade});
       }
     }
 
     // Base color classes
-    .text-#{$color-name},
-    .hover\:text-#{$color-name}:hover, // todo: improve these loops to save time
-    .group:hover .group-hover\:text-#{$color-name} {
+    #{VAR.$parent-selector} .text-#{$color-name},
+    #{VAR.$parent-selector} .hover\:text-#{$color-name}:hover, // todo: improve these loops to save time
+    #{VAR.$parent-selector} .group:hover .group-hover\:text-#{$color-name} {
       color: var(--#{$color-name});
     }
 
-    .bg-#{$color-name},
-    .hover\:bg-#{$color-name}:hover, // todo: improve these loops to save time
-    .group:hover .group-hover\:bg-#{$color-name} {
+    #{VAR.$parent-selector} .bg-#{$color-name},
+    #{VAR.$parent-selector} .hover\:bg-#{$color-name}:hover, // todo: improve these loops to save time
+    #{VAR.$parent-selector} .group:hover .group-hover\:bg-#{$color-name} {
       background-color: var(--#{$color-name});
     }
 
-    .border-#{$color-name},
-    .hover\:border-#{$color-name}:hover,
-    .group:hover .group-hover\:border-#{$color-name} {
+    #{VAR.$parent-selector} .border-#{$color-name},
+    #{VAR.$parent-selector} .hover\:border-#{$color-name}:hover,
+    #{VAR.$parent-selector} .group:hover .group-hover\:border-#{$color-name} {
       border-color: var(--#{$color-name});
     }
   }
 
   // Semantic color utilities
-  .bg-page {
+  #{VAR.$parent-selector} .bg-page {
     background-color: var(--background);
   }
 
-  .bg-surface {
+  #{VAR.$parent-selector} .bg-surface {
     background-color: var(--surface);
   }
 
-  .bg-active {
+  #{VAR.$parent-selector} .bg-active {
     background-color: var(--button-bg-color);
   }
 
-  .bg-hover {
+  #{VAR.$parent-selector} .bg-hover {
     background-color: var(--button-bg-color-hover);
   }
 
-  .bg-white,
+  #{VAR.$parent-selector} .bg-white,
   .hover\:bg-white:hover {
     background-color: white;
   }
 
-  .bg-black,
+  #{VAR.$parent-selector} .bg-black,
   .hover\:bg-black:hover {
     background-color: black;
   }
 
-  .text-default {
+  #{VAR.$parent-selector} .text-default {
     color: var(--text-default);
   }
 
-  .text-muted {
+  #{VAR.$parent-selector} .text-muted {
     color: var(--text-muted);
   }
 
-  .text-inverted {
+  #{VAR.$parent-selector} .text-inverted {
     color: var(--inverted-text-color);
   }
 
-  .text-white,
-  .hover\:text-white:hover {
+  #{VAR.$parent-selector} .text-white,
+  #{VAR.$parent-selector} .hover\:text-white:hover {
     color: white;
   }
 
-  .text-black,
-  .hover\:text-black:hover {
+  #{VAR.$parent-selector} .text-black,
+  #{VAR.$parent-selector} .hover\:text-black:hover {
     color: black;
   }
 
-  .text-subtle {
+  #{VAR.$parent-selector} .text-subtle {
     color: var(--text-muted);
     opacity: 0.7;
   }
