--- a/src/styles/utilities/_sizing.scss
+++ b/src/styles/utilities/_sizing.scss
@@ -95,198 +95,198 @@
 }
 
 @if VAR.$generate-utility-classes {
-  .w-screen {
+  #{VAR.$parent-selector} .w-screen {
     @include w-screen;
   }
 
-  .h-screen {
+  #{VAR.$parent-selector} .h-screen {
     @include h-screen;
   }
 
-  .w-auto {
+  #{VAR.$parent-selector} .w-auto {
     @include w-auto;
   }
 
-  .w-full {
+  #{VAR.$parent-selector} .w-full {
     @include w-full;
   }
 
-  .h-auto {
+  #{VAR.$parent-selector} .h-auto {
     @include h-auto;
   }
 
-  .h-full {
+  #{VAR.$parent-selector} .h-full {
     @include h-full;
   }
 
-  .w-min {
+  #{VAR.$parent-selector} .w-min {
     @include w-min;
   }
 
-  .h-min {
+  #{VAR.$parent-selector} .h-min {
     @include h-min;
   }
 
-  .w-fit {
+  #{VAR.$parent-selector} .w-fit {
     @include w-fit;
   }
 
-  .h-fit {
+  #{VAR.$parent-selector} .h-fit {
     @include h-fit;
   }
 
-  .min-w-full {
+  #{VAR.$parent-selector} .min-w-full {
     @include min-w-full;
   }
 
-  .max-w-full {
+  #{VAR.$parent-selector} .max-w-full {
     @include max-w-full;
   }
 
-  .min-h-full {
+  #{VAR.$parent-selector} .min-h-full {
     @include min-h-full;
   }
 
-  .max-h-full {
+  #{VAR.$parent-selector} .max-h-full {
     @include max-h-full;
   }
 
   // Percentage widths
   @each $i in VAR.$percentages {
-    .w-#{$i}p {
+    #{VAR.$parent-selector} .w-#{$i}p {
       @include width-percent($i);
     }
-    .h-#{$i}p {
+    #{VAR.$parent-selector} .h-#{$i}p {
       @include height-percent($i);
     }
-    .min-w-#{$i}p {
+    #{VAR.$parent-selector} .min-w-#{$i}p {
       @include min-width-percent($i);
     }
-    .min-h-#{$i}p {
+    #{VAR.$parent-selector} .min-h-#{$i}p {
       @include min-height-percent($i);
     }
-    .max-w-#{$i}p {
+    #{VAR.$parent-selector} .max-w-#{$i}p {
       @include max-width-percent($i);
     }
-    .max-h-#{$i}p {
+    #{VAR.$parent-selector} .max-h-#{$i}p {
       @include max-height-percent($i);
     }
   }
 
   // Generate utilities from spacing map
   @each $key, $value in VAR.$spacings {
-    .w-#{$key},
-    .hover\:w-#{$key}:hover,
-    .group:hover .group-hover\:w-#{$key} {
+    #{VAR.$parent-selector} .w-#{$key},
+    #{VAR.$parent-selector} .hover\:w-#{$key}:hover,
+    #{VAR.$parent-selector} .group:hover .group-hover\:w-#{$key} {
       @include width($value);
     }
-    .h-#{$key},
-    .hover\:h-#{$key}:hover,
-    .group:hover .group-hover\:h-#{$key} {
+    #{VAR.$parent-selector} .h-#{$key},
+    #{VAR.$parent-selector} .hover\:h-#{$key}:hover,
+    #{VAR.$parent-selector} .group:hover .group-hover\:h-#{$key} {
       @include height($value);
     }
 
-    .min-w-#{$key} {
+    #{VAR.$parent-selector} .min-w-#{$key} {
       @include min-width($value);
     }
-    .min-h-#{$key} {
+    #{VAR.$parent-selector} .min-h-#{$key} {
       @include min-height($value);
     }
-    .max-w-#{$key} {
+    #{VAR.$parent-selector} .max-w-#{$key} {
       @include max-width($value);
     }
-    .max-h-#{$key} {
+    #{VAR.$parent-selector} .max-h-#{$key} {
       @include max-height($value);
     }
   }
 
   // Pixel widths based on spacing scale
   @each $breakpoint, $width in VAR.$breakpoints {
-    .w-#{$breakpoint} {
+    #{VAR.$parent-selector} .w-#{$breakpoint} {
       @include width($width);
     }
-    .min-w-#{$breakpoint} {
+    #{VAR.$parent-selector} .min-w-#{$breakpoint} {
       @include min-width($width);
     }
-    .max-w-#{$breakpoint} {
+    #{VAR.$parent-selector} .max-w-#{$breakpoint} {
       @include max-width($width);
     }
 
-    .w-auto\@#{$breakpoint} {
+    #{VAR.$parent-selector} .w-auto\@#{$breakpoint} {
       @include w-auto;
     }
-    .w-full\@#{$breakpoint} {
+    #{VAR.$parent-selector} .w-full\@#{$breakpoint} {
       @include w-full;
     }
-    .h-auto\@#{$breakpoint} {
+    #{VAR.$parent-selector} .h-auto\@#{$breakpoint} {
       @include h-auto;
     }
-    .h-full\@#{$breakpoint} {
+    #{VAR.$parent-selector} .h-full\@#{$breakpoint} {
       @include h-full;
     }
-    .w-min\@#{$breakpoint} {
+    #{VAR.$parent-selector} .w-min\@#{$breakpoint} {
       @include w-min;
     }
-    .h-min\@#{$breakpoint} {
+    #{VAR.$parent-selector} .h-min\@#{$breakpoint} {
       @include h-min;
     }
-    .w-fit\@#{$breakpoint} {
+    #{VAR.$parent-selector} .w-fit\@#{$breakpoint} {
       @include w-fit;
     }
-    .h-fit\@#{$breakpoint} {
+    #{VAR.$parent-selector} .h-fit\@#{$breakpoint} {
       @include h-fit;
     }
 
     @include MQ.media-up($breakpoint) {
       // Generate utilities from spacing map
       @each $i in VAR.$percentages {
-        .w-#{$i}p\@#{$breakpoint},
-        .hover\:w-#{$i}p\@#{$breakpoint}:hover,
-        .group:hover .group-hover\:w-#{$i}p\@#{$breakpoint} {
+        #{VAR.$parent-selector} .w-#{$i}p\@#{$breakpoint},
+        #{VAR.$parent-selector} .hover\:w-#{$i}p\@#{$breakpoint}:hover,
+        #{VAR.$parent-selector} .group:hover .group-hover\:w-#{$i}p\@#{$breakpoint} {
           @include width-percent($i);
         }
-        .h-#{$i}p\@#{$breakpoint},
-        .hover\:h-#{$i}p\@#{$breakpoint}:hover,
-        .group:hover .group-hover\:h-#{$i}p\@#{$breakpoint} {
+        #{VAR.$parent-selector} .h-#{$i}p\@#{$breakpoint},
+        #{VAR.$parent-selector} .hover\:h-#{$i}p\@#{$breakpoint}:hover,
+        #{VAR.$parent-selector} .group:hover .group-hover\:h-#{$i}p\@#{$breakpoint} {
           @include height-percent($i);
         }
 
-        .min-w-#{$i}p\@#{$breakpoint} {
+        #{VAR.$parent-selector} .min-w-#{$i}p\@#{$breakpoint} {
           @include min-width-percent($i);
         }
-        .min-h-#{$i}p\@#{$breakpoint} {
+        #{VAR.$parent-selector} .min-h-#{$i}p\@#{$breakpoint} {
           @include min-height-percent($i);
         }
-        .max-w-#{$i}p\@#{$breakpoint} {
+        #{VAR.$parent-selector} .max-w-#{$i}p\@#{$breakpoint} {
           @include max-width-percent($i);
         }
-        .max-h-#{$i}p\@#{$breakpoint} {
+        #{VAR.$parent-selector} .max-h-#{$i}p\@#{$breakpoint} {
           @include max-height-percent($i);
         }
       }
 
       @each $key, $value in VAR.$spacings {
-        .w-#{$key}\@#{$breakpoint},
-        .hover\:w-#{$key}\@#{$breakpoint}:hover,
-        .group:hover .group-hover\:w-#{$key}\@#{$breakpoint} {
+        #{VAR.$parent-selector} .w-#{$key}\@#{$breakpoint},
+        #{VAR.$parent-selector} .hover\:w-#{$key}\@#{$breakpoint}:hover,
+        #{VAR.$parent-selector} .group:hover .group-hover\:w-#{$key}\@#{$breakpoint} {
           @include width($value);
         }
-        .h-#{$key}\@#{$breakpoint},
-        .hover\:h-#{$key}\@#{$breakpoint}:hover,
-        .group:hover .group-hover\:h-#{$key}\@#{$breakpoint} {
+        #{VAR.$parent-selector} .h-#{$key}\@#{$breakpoint},
+        #{VAR.$parent-selector} .hover\:h-#{$key}\@#{$breakpoint}:hover,
+        #{VAR.$parent-selector} .group:hover .group-hover\:h-#{$key}\@#{$breakpoint} {
           @include height($value);
         }
 
-        .min-w-#{$key}\@#{$breakpoint} {
+        #{VAR.$parent-selector} .min-w-#{$key}\@#{$breakpoint} {
           @include min-width($value);
         }
-        .min-h-#{$key}\@#{$breakpoint} {
+        #{VAR.$parent-selector} .min-h-#{$key}\@#{$breakpoint} {
           @include min-height($value);
         }
-        .max-w-#{$key}\@#{$breakpoint} {
+        #{VAR.$parent-selector} .max-w-#{$key}\@#{$breakpoint} {
           @include max-width($value);
         }
-        .max-h-#{$key}\@#{$breakpoint} {
+        #{VAR.$parent-selector} .max-h-#{$key}\@#{$breakpoint} {
           @include max-height($value);
         }
       }
