--- a/src/styles/utilities/_tooltips.scss
+++ b/src/styles/utilities/_tooltips.scss
@@ -1,4 +1,6 @@
-:root {
+@use "../abstracts/config" as VAR;
+
+@mixin tooltip-variables {
   // Tooltip core variables
   --tooltip-bg: rgba(17 17 17 / 90%);
   --tooltip-shadow-color: rgb(0 0 0 / 20%);
@@ -21,7 +23,18 @@
   --tooltip-border-radius: 4px;
 }
 
-[data-tooltip][role~="tooltip"] {
+// Apply variables based on parent selector
+@if VAR.$parent-selector == "" {
+  :root {
+    @include tooltip-variables;
+  }
+} @else {
+  #{VAR.$parent-selector} {
+    @include tooltip-variables;
+  }
+}
+
+#{VAR.$parent-selector} [data-tooltip][role~="tooltip"] {
   position: relative;
 
   &::before,
@@ -67,12 +80,12 @@
 }
 
 // Top position tooltips
-[role~="tooltip"][data-microtip-position|="top"] {
+#{VAR.$parent-selector} [role~="tooltip"][data-microtip-position|="top"] {
   &::before {
     background: url("data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2236px%22%20height%3D%2212px%22%3E%3Cpath%20fill%3D%22rgba%2817,%2017,%2017,%200.9%29%22%20transform%3D%22rotate%280%29%22%20d%3D%22M2.658,0.000%20C-13.615,0.000%2050.938,0.000%2034.662,0.000%20C28.662,0.000%2023.035,12.002%2018.660,12.002%20C14.285,12.002%208.594,0.000%202.658,0.000%20Z%22/%3E%3C/svg%3E") no-repeat;
     height: 6px;
     width: 18px;
-    margin-bottom: 5px;
+    margin-bottom: 6px;
     transform: translate3d(-50%, 0, 0);
     bottom: 100%;
     left: 50%;
@@ -88,15 +101,13 @@
   &:hover::before {
     transform: translate3d(-50%, -5px, 0);
   }
-}
 
-[role~="tooltip"][data-microtip-position="top"] {
   &:hover::after {
     transform: translate3d(-50%, -5px, 0);
   }
 }
 
-[role~="tooltip"][data-microtip-position="top-left"] {
+#{VAR.$parent-selector} [role~="tooltip"][data-microtip-position="top-left"] {
   &::after {
     transform: translate3d(calc(-100% + 16px), 0, 0);
     bottom: 100%;
@@ -107,7 +118,7 @@
   }
 }
 
-[role~="tooltip"][data-microtip-position="top-right"] {
+#{VAR.$parent-selector} [role~="tooltip"][data-microtip-position="top-right"] {
   &::after {
     transform: translate3d(calc(0% + -16px), 0, 0);
     bottom: 100%;
@@ -119,7 +130,7 @@
 }
 
 // Bottom position tooltips
-[role~="tooltip"][data-microtip-position|="bottom"] {
+#{VAR.$parent-selector} [role~="tooltip"][data-microtip-position|="bottom"] {
   &::before {
     background: url("data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2236px%22%20height%3D%2212px%22%3E%3Cpath%20fill%3D%22rgba%2817,%2017,%2017,%200.9%29%22%20transform%3D%22rotate%28180%2018%206%29%22%20d%3D%22M2.658,0.000%20C-13.615,0.000%2050.938,0.000%2034.662,0.000%20C28.662,0.000%2023.035,12.002%2018.660,12.002%20C14.285,12.002%208.594,0.000%202.658,0.000%20Z%22/%3E%3C/svg%3E") no-repeat;
     height: 6px;
@@ -142,15 +153,13 @@
   &:hover::before {
     transform: translate3d(-50%, 0, 0);
   }
-}
 
-[role~="tooltip"][data-microtip-position="bottom"] {
   &:hover::after {
     transform: translate3d(-50%, 0, 0);
   }
 }
 
-[role~="tooltip"][data-microtip-position="bottom-left"] {
+#{VAR.$parent-selector} [role~="tooltip"][data-microtip-position="bottom-left"] {
   &::after {
     transform: translate3d(calc(-100% + 16px), -10px, 0);
     top: 100%;
@@ -161,7 +170,7 @@
   }
 }
 
-[role~="tooltip"][data-microtip-position="bottom-right"] {
+#{VAR.$parent-selector} [role~="tooltip"][data-microtip-position="bottom-right"] {
   &::after {
     transform: translate3d(calc(0% + -16px), -10px, 0);
     top: 100%;
@@ -173,7 +182,7 @@
 }
 
 // Left position tooltips
-[role~="tooltip"][data-microtip-position="left"] {
+#{VAR.$parent-selector} [role~="tooltip"][data-microtip-position="left"] {
   &::before,
   &::after {
     inset: auto auto auto 100%;
@@ -202,7 +211,7 @@
 }
 
 // Right position tooltips
-[role~="tooltip"][data-microtip-position="right"] {
+#{VAR.$parent-selector} [role~="tooltip"][data-microtip-position="right"] {
   &::before,
   &::after {
     bottom: auto;
@@ -230,17 +239,17 @@
 }
 
 // Tooltip sizes
-[role~="tooltip"][data-microtip-size="small"]::after {
+#{VAR.$parent-selector} [role~="tooltip"][data-microtip-size="small"]::after {
   white-space: initial;
   width: var(--tooltip-small-width);
 }
 
-[role~="tooltip"][data-microtip-size="medium"]::after {
+#{VAR.$parent-selector} [role~="tooltip"][data-microtip-size="medium"]::after {
   white-space: initial;
   width: var(--tooltip-medium-width);
 }
 
-[role~="tooltip"][data-microtip-size="large"]::after {
+#{VAR.$parent-selector} [role~="tooltip"][data-microtip-size="large"]::after {
   white-space: initial;
   width: var(--tooltip-large-width);
 }
